# synca-rag

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: chat.py  documents.py
backend/app/core/: config.py
backend/app/db/: base_class.py  init_db.py  session.py
backend/app/models/: rag_models.py
backend/app/services/: ingestion.py  rag_service.py  tools.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  Upload.tsx
frontend/src/services/: api.ts
