[project]
name = "synca-backend"
version = "0.1.0"
description = "API Enterprise do Synca RAG"
authors = [
    {name = "Pablo", email = "pablo.miguel.dias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.110.0)",
    "uvicorn[standard] (>=0.29.0)",
    "pydantic-settings (>=2.2.0)",
    "asyncpg (>=0.29.0)",
    "sqlalchemy (>=2.0.0)",
    "alembic (>=1.13.0)",
    "redis (>=5.0.0)",
    "minio (>=7.2.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-ollama (>=0.0.1)",
    "python-multipart (>=0.0.9)",
    "requests (>=2.31.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "pypdf (>=6.7.0,<7.0.0)",
    "ddgs (>=9.10.0,<10.0.0)",
    "langchain-core (>=1.2.14,<2.0.0)",
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"